Refactored to add JS classes

--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
 
     <main>
       <div class="main">
-        <h1>Awesome books</h1>
+        <h1>All awesome books</h1>
       </div>
     </main>
 
     <section class="booksList"></section>
 
+    <div class="section_divider"></div>
+
     <section class="addBook">
+      <h2>Add a new book</h2>
       <form id="addBookForm" action="#">
         <label for="bookName">Book name</label>
         <input type="text" id="bookName" name="bookName" placeholder="Title" />
@@ -48,6 +51,6 @@
       </form>
     </section>
 
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
