--- a/index.html
+++ b/index.html
@@ -17,23 +17,19 @@
         <h3>Awesome Books</h3>
         <nav>
           <ul class="navLinks">
-            <li><a href="">List</a></li>
-            <li><a href="">Add new</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a class="list" href="">List</a></li>
+            <li><a class="add" href="">Add new</a></li>
+            <li><a class="contactLink" href="">Contact</a></li>
           </ul>
         </nav>
       </div>
     </header>
+    <p id="showDate"></p>
 
-    <main>
-      <div class="main">
-        <h1>All awesome books</h1>
-      </div>
-    </main>
-
-    <section class="booksList"></section>
-
-    <div class="section_divider"></div>
+    <section class="booksList">
+      <h1>All awesome books</h1>
+      <div class="booksList__container"></div>
+    </section>
 
     <section class="addBook">
       <h2>Add a new book</h2>
@@ -50,6 +46,31 @@
         <input type="submit" value="Add" />
       </form>
     </section>
+
+    <section class="contact">
+
+      <div class="contact__container">
+      <h2>Contact information</h2>
+      <p>
+        Do have any questions or you just want to say "Hello"?<br /> You can reach out to us!
+      </p>
+
+      <ul>
+        <li>Our e-mail: mail@mail.com</li>
+        <li>Our phone number: 0043586534422</li>
+        <li>Our address: Streetname 22, 84503 City, Country</li>
+      </ul>
+      </div>
+
+
+
+    </section>
+
+    <footer>
+      <div class="footer">
+        <p>Awesome Books &copy; 2023</p>
+      </div>
+    </footer>
 
     <script src="main.js" type="module"></script>
   </body>
