Add arrow function notation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <header>
@@ -72,6 +72,6 @@
       </div>
     </footer>
 
-    <script src="main.js" type="module"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
